[tool.poetry]
name = "extendedbf"
version = "0.1.0"
description = ""
authors = ["Teagan Penland <teagan.penland@tallulahfalls.org>","Joshua Lander <joshua.lander@tallulahfalls.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
